syntax = "proto3";

package pb;

option go_package = "github.com/Ali-Gorgani/library-management-api/users-service/api/pb";

import "google/protobuf/timestamp.proto";

message AddUserReq {
  string username = 1;
  string password = 2;
  string email = 3;
  bool is_admin = 4;
}

message UserRes {
  int32 id = 1;
  string username = 2;
  string email = 3;
  bool is_admin = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetUsersReq {}

message GetUserReq {
  int32 id = 1;
}

message UpdateUserReq {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  bool is_admin = 5;
}

message DeleteUserReq {
  int32 id = 1;
}

message DeleteUserRes {}

service UsersService {
  rpc AddUser(AddUserReq) returns (UserRes) {}
  rpc GetUsers(GetUsersReq) returns (stream UserRes) {}
  rpc GetUser(GetUserReq) returns (UserRes) {}
  rpc UpdateUser(UpdateUserReq) returns (UserRes) {}
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes) {}
}